# claude-proxy

./: .env.example  .gitignore  Dockerfile  README.md  a.sh  app.py  config.py  curl_tests.sh  docker-compose.yml  pyproject.toml  run_claude_code_tests.py  test_api.sh  test_server.py
models/: claude.py  openai.py
providers/: anthropic.py  base.py  openai.py
src/claude_proxy/: __init__.py  config.py  main.py  utils.py
src/claude_proxy/models/: __init__.py  claude.py
src/claude_proxy/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/: README.md  conftest.py  conversion_runner.py  test_app.py  test_auth.py  test_convert.py  test_models.py  test_providers.py
tests/convert_cases/advanced/: streaming_response.jsonc
tests/convert_cases/basic/: custom_big_model.jsonc  custom_model_mapping.jsonc  custom_small_model.jsonc  haiku_model.jsonc  model_mapping.jsonc  opus_model.jsonc  request_only.jsonc  response_only.jsonc  simple_message.jsonc  system_prompt.jsonc
tests/convert_cases/edge_cases/: empty_content.jsonc  empty_request.jsonc  empty_response.jsonc  finish_reason_length.jsonc  finish_reason_tool_calls.jsonc  finish_reasons.jsonc
tests/convert_cases/error_cases/: invalid_model.jsonc
tests/integration/: __init__.py  conftest.py
tests/integration/claude-code/: README.md  __init__.py  test_claude_code_integration.py
tests/integration/openai/: __init__.py  test_auth_integration.py  test_basic_integration.py
tests/unit/: __init__.py  conversion_runner.py  test_auth.py  test_config.py  test_convert.py
tests/unit/convert_cases/advanced/: streaming_response.jsonc
tests/unit/convert_cases/basic/: custom_big_model.jsonc  custom_small_model.jsonc  future_model_name.jsonc  multi_turn.jsonc  simple_request.jsonc  simple_response.jsonc  system_prompt.jsonc
tests/unit/convert_cases/edge_cases/: finish_reason_content_filter.jsonc  finish_reason_function_call.jsonc  finish_reason_stop.jsonc  finish_reason_unknown.jsonc
